[tool.poetry]
name = "dsPatformAPI"
version = "0.0.1"
description = "FastAPI to simplify administration and management of the Data Science Platform"
authors = ["<gareth.hart@boots.co.uk>"]
license = "None"

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^5.0.4"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
pydantic = "^1.9.2"
requests = "^2.28.1"
python-multipart = "^0.0.5"
direnv = "^2020.12.3"
azure-devops = "^6.0.0-beta.4"
email-validator = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
